syntax = "proto3";

package subnet.app;

import "google/protobuf/wrappers.proto";

message App {
  string id = 1;
  string peer_id = 2;
  string owner = 3;
  string name = 4;
  string symbol = 5;
  string budget = 6;
  string spent_budget = 7;
  string max_nodes = 8;
  string min_cpu = 9;
  string min_gpu = 10;
  string min_memory = 11;
  string min_upload_bandwidth = 12;
  string min_download_bandwidth = 13;
  string node_count = 14;
  string price_per_cpu = 15;
  string price_per_gpu = 16;
  string price_per_memory_gb = 17;
  string price_per_storage_gb = 18;
  string price_per_bandwidth_gb = 19;
  string status = 20;
  ResourceUsage usage = 21;
  AppMetadata metadata = 22;
  string ip = 23;
  string operator = 24;
  string verifier = 25;
}

// ResourceUsage represents the resource usage data
message ResourceUsage {
	bytes app_id = 1;
	bytes provider_id = 2;
	bytes used_cpu = 3;
	bytes used_gpu = 4;
	bytes used_memory = 5;
	bytes used_storage = 6;
	bytes used_upload_bytes = 7;
  bytes used_download_bytes = 8; 
  bytes duration = 9;
  bytes timestamp = 10;
  string peer_id = 11;
}

message AppMetadata {
  AppInfo app_info = 1;
  ContainerConfig container_config = 2;
  ContactInfo contact_info = 3;
}

message AppInfo {
  string name = 1;
  string description = 2;
  string logo = 3;
  string banner = 4;
  string website = 5;
  repeated string preview = 6;
}

message ContainerConfig {
  string image = 1;
  repeated string command = 2;
  map<string, string> env = 3;
  Resources resources = 4;
  repeated Port ports = 5;
  repeated Volume volumes = 6;
}

message Resources {
  string cpu = 1;
  string memory = 2;
  string storage = 3;
}

message Port {
  int32 container_port = 1;
  string protocol = 2;
}

message Volume {
  string name = 1;
  string mount_path = 2;
}

message ContactInfo {
  string email = 1;
  string github = 2;
}

message SignatureRequest {
  oneof data {
    ResourceUsage usage = 1;
  }
}

message SignatureResponse {
  bytes signature = 1;
}