syntax = "proto3";

package usage;

// ResourceUsage represents the resource usage data
message ResourceUsage {
	bytes app_id = 1;
	bytes subnet_id = 2;
	bytes used_cpu = 3;
	bytes used_gpu = 4;
	bytes used_memory = 5;
	bytes used_storage = 6;
	bytes used_upload_bytes = 7;
    bytes used_download_bytes = 8; 
    bytes duration = 9;
}

// ResourceUsageMetadata represents the resource usage info of an application
message ResourceUsageMetadata {
	repeated uint32 pids = 1;
}